fixed recent post box alignment

--- a/css/style.css
+++ b/css/style.css
@@ -486,7 +486,10 @@ h1, h2, h3, h4, h5, h6, figure {
 .user-frame {
   width: 90%;
   padding: 3em;
-  -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.13);
+  margin-left: auto;
+  margin-right: auto;
+  /* -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.13); */
+  /* webkit breaks the alignment */
   -moz-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.13);
   box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.13);
 }
